# dotfiles

./: .gitignore  .gitmodules  1  AGENTS.md  Dockerfile  Dockerfile.base  LICENSE  README.md  bash_aliases  bash_profile  bashrc  clean_files.py  coder_personalize.sh  dev.nix  devcontainer.json  dfs  dotfiles.json  dotfiles.py  flake.nix  install.sh  run-in-docker.sh  update.sh  update_dotfiles  update_dotfiles.sh  vimrc  zshrc
.devcontainer/: devcontainer.json
.github/workflows/: base-docker-image.yml  docker-image.yml  nix-build.yml  propose-updates.yml
cli/: .gitignore  Cargo.toml  cli.py  dfs  lazy_shells.json  pip2nix.ini  requirements.txt  shell.nix
cli/src/: main.rs
configs/: CLAUDE.md  claude-spinner-verbs.txt  claude-statusline.sh  home.nix  joplin-keymap.json  nix.conf  tmux.conf  toad.json  tuios-config.toml
configs/git/: global_gitignore
configs/nix/: dev-env.nix  git.nix  packages.nix  ryelang.nix  zsh.nix
configs/vim/: vimrc  (+2 more)
dotfiles/: .bash_aliases  .bash_profile  .bashrc  .gitconfig  .gitignore  .global_gitignore  .skhdrc  .tmux.conf  .vim_bindings.vim  .vim_plugin_settings.vim  .vim_plugins.vim  .vim_settings.vim  .vimrc  .zshrc
modules/: ai.nix  fonts.nix  git.nix  graphical.nix  home.nix  joplin.nix  lazy_github.nix  lazygit.nix  options.nix  toad.nix  tuios.nix  work.nix  zsh.nix  zshrc
options/: alpenglow.nix  coder.nix  gizmo-macbook.nix  gizmonix.nix  work-macbook.nix  wsl.nix
pkgs/: claude-squad.nix
rust-cli/: Cargo.toml  dfs  shell.nix
rust-cli/src/: main.rs
scripts/: install_dotfiles  ra-multiplex.sh  update_dotfiles
(+71 files in other folders)
