[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
reqwest = { version = "*", features = ["blocking"] }
tempfile = { version = "*" }
dirs = { version = "*" }
log = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
